feat: pdf translations
